maintenance(small-scale-traffic-generation): reduce public footprint; adjust naming of variables and methods; add comments and questions (#5152)
* reduce public footprint; adjust naming of variables and methods; add comments and questions

* some more changes

* add missing class; some more smallish changes

* update readme

* some comments

* update readme

* renames and comments

---------

Co-authored-by: Ricardo Ewert <ewert@vsp.tu-berlin.de>